# shopstream

./: .copier-answers.yml  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.dev  Makefile  README.md  docker-compose.yml  logging.toml  noxfile.py  pyproject.toml  pyrightconfig.json  shopstream-protean.code-workspace
.github/workflows/: ci.yml
docker/: entrypoint.dev.sh
docker/postgres/: init-databases.sh
docs/: README.md  context-map.md  glossary.md  priority-lanes.md
docs/catalogue/: README.md
docs/catalogue/scenarios/: product-lifecycle.md
docs/fulfillment/: README.md
docs/fulfillment/scenarios/: delivery-exception.md  fulfillment-lifecycle.md
docs/identity/: README.md
docs/identity/scenarios/: customer-registration.md
docs/inventory/: README.md
docs/inventory/scenarios/: reservation-lifecycle.md  stock-receiving.md
docs/notifications/: README.md
docs/notifications/scenarios/: notification-dispatch.md  preference-management.md
docs/ordering/: README.md
docs/ordering/scenarios/: cart-to-order.md  order-fulfillment.md
docs/payments/: README.md
docs/payments/scenarios/: payment-lifecycle.md  refund-flow.md
docs/reviews/: README.md
docs/reviews/scenarios/: review-moderation.md  review-submission.md
loadtests/: README.md  data_generators.py  locust.conf  locustfile.py
loadtests/helpers/: response.py  state.py
loadtests/scenarios/: catalogue.py  cross_domain.py  fulfillment.py  identity.py  inventory.py  mixed.py  notifications.py  ordering.py  payments.py  priority_lanes.py  reviews.py  stress.py
scripts/: loadtest-stack.sh  migration_demo.py  worker-monitor.py
src/: app.py  manage.py  monitor.py  observatory.py  server.py
src/catalogue/: api.py  create_db.sh  domain.py  domain.toml
src/catalogue/api/: __init__.py  routes.py  schemas.py
src/catalogue/category/: category.py  events.py  management.py
src/catalogue/product/: creation.py  details.py  events.py  images.py  lifecycle.py  product.py  variants.py
src/catalogue/projections/: category_products.py  category_products_queries.py  category_tree.py  category_tree_queries.py  price_history.py  product_card.py  product_card_queries.py  product_detail.py  product_detail_queries.py  seller_catalogue.py
src/catalogue/shared/: money.py  sku.py
src/catalogue/utils/: db.py  logging.py
src/example/: aggregate.py  command_handlers.py  commands.py  event_handlers.py  events.py  projections.py  repository.py  value_objects.py
src/fulfillment/: create_db.sh  domain.py  domain.toml
src/fulfillment/api/: __init__.py  routes.py  schemas.py
src/fulfillment/carrier/: __init__.py  fake_adapter.py  port.py
src/fulfillment/fulfillment/: cancellation.py  creation.py  delivery.py  events.py  fulfillment.py  order_events.py  packing.py  payment_events.py  picking.py  shipping.py  tracking.py
src/fulfillment/projections/: daily_shipments.py  delivery_performance.py  fulfillment_status.py  shipment_tracking.py  shipment_tracking_queries.py  warehouse_queue.py
src/identity/: api.py  create_db.sh  domain.py  domain.toml
src/identity/api/: __init__.py  routes.py  schemas.py
src/identity/customer/: account.py  addresses.py  customer.py  events.py  profile.py  registration.py  tier.py
src/identity/model/: value_objects.py
src/identity/projections/: address_book.py  address_book_queries.py  customer_card.py  customer_card_queries.py  customer_lookup.py  customer_segments.py
src/identity/shared/: email.py  phone.py
src/identity/utils/: db.py  logging.py
src/inventory/: create_db.sh  domain.py  domain.toml
src/inventory/api/: __init__.py  routes.py  schemas.py
src/inventory/projections/: inventory_level.py  inventory_valuation.py  low_stock_report.py  product_availability.py  reservation_status.py  shrinkage_report.py  stock_movement_log.py  warehouse_stock.py
src/inventory/stock/: adjustment.py  catalogue_events.py  catalogue_subscriber.py  damage.py  events.py  expiry.py  fulfillment_events.py  initialization.py  ordering_events.py  receiving.py  reservation.py  returns.py  shipping.py  stock.py
src/inventory/utils/: logging.py
src/inventory/warehouse/: events.py  management.py  warehouse.py
src/notifications/: create_db.sh  domain.py  domain.toml
src/notifications/api/: __init__.py  routes.py  schemas.py
src/notifications/channel/: __init__.py  email_port.py  fake_email.py  fake_push.py  fake_slack.py  fake_sms.py  push_port.py  slack_port.py  sms_port.py
src/notifications/notification/: cancellation.py  cart_events.py  dispatch.py  events.py  fulfillment_events.py  helpers.py  identity_events.py  inventory_events.py  notification.py  ordering_events.py  payment_events.py  retry.py  review_events.py  scheduler.py
src/ordering/: create_db.sh  domain.py  domain.toml
src/ordering/api/: __init__.py  (+2 more)
src/payments/: create_db.sh  domain.py  domain.toml
src/reviews/: create_db.sh  domain.py  domain.toml
src/shared/: enrichment.py
tests/: README.md  conftest.py
tests/catalogue/: conftest.py
tests/fulfillment/: conftest.py
tests/identity/: conftest.py
tests/integration/: conftest.py  test_event_publishing.py
tests/inventory/: conftest.py
tests/notifications/: conftest.py
tests/ordering/: conftest.py
tests/payments/: conftest.py
tests/reviews/: conftest.py
(+436 files in other folders)
